; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_udp.c___udp6_lib_rcv.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_udp.c___udp6_lib_rcv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32, i32 }
%struct.udp_table = type { i32 }
%struct.in6_addr = type { i32 }
%struct.net = type { i32 }
%struct.udphdr = type { i32, i32, i32, i32 }
%struct.sock = type { %struct.dst_entry* }
%struct.dst_entry = type { i32 }
%struct.TYPE_4__ = type { %struct.in6_addr, %struct.in6_addr }
%struct.TYPE_3__ = type { i32 }

@IPPROTO_UDP = common dso_local global i32 0, align 4
@XFRM_POLICY_IN = common dso_local global i32 0, align 4
@UDP_MIB_NOPORTS = common dso_local global i32 0, align 4
@IPPROTO_UDPLITE = common dso_local global i32 0, align 4
@ICMPV6_DEST_UNREACH = common dso_local global i32 0, align 4
@ICMPV6_PORT_UNREACH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [60 x i8] c"UDP%sv6: short packet: From [%pI6c]:%u %d/%d to [%pI6c]:%u\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"-Lite\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@UDP_MIB_CSUMERRORS = common dso_local global i32 0, align 4
@UDP_MIB_INERRORS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__udp6_lib_rcv(%struct.sk_buff* %0, %struct.udp_table* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca %struct.udp_table*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.in6_addr*, align 8
  %9 = alloca %struct.in6_addr*, align 8
  %10 = alloca %struct.net*, align 8
  %11 = alloca %struct.udphdr*, align 8
  %12 = alloca %struct.sock*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.dst_entry*, align 8
  %15 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %5, align 8
  store %struct.udp_table* %1, %struct.udp_table** %6, align 8
  store i32 %2, i32* %7, align 4
  %16 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %17 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.net* @dev_net(i32 %18)
  store %struct.net* %19, %struct.net** %10, align 8
  store i32 0, i32* %13, align 4
  %20 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %21 = call i32 @pskb_may_pull(%struct.sk_buff* %20, i32 16)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %3
  br label %234

24:                                               ; preds = %3
  %25 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %26 = call %struct.TYPE_4__* @ipv6_hdr(%struct.sk_buff* %25)
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 1
  store %struct.in6_addr* %27, %struct.in6_addr** %8, align 8
  %28 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %29 = call %struct.TYPE_4__* @ipv6_hdr(%struct.sk_buff* %28)
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  store %struct.in6_addr* %30, %struct.in6_addr** %9, align 8
  %31 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %32 = call %struct.udphdr* @udp_hdr(%struct.sk_buff* %31)
  store %struct.udphdr* %32, %struct.udphdr** %11, align 8
  %33 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %34 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %33, i32 0, i32 3
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @ntohs(i32 %35)
  store i32 %36, i32* %13, align 4
  %37 = load i32, i32* %13, align 4
  %38 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %39 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = icmp sgt i32 %37, %40
  br i1 %41, label %42, label %43

42:                                               ; preds = %24
  br label %202

43:                                               ; preds = %24
  %44 = load i32, i32* %7, align 4
  %45 = load i32, i32* @IPPROTO_UDP, align 4
  %46 = icmp eq i32 %44, %45
  br i1 %46, label %47, label %81

47:                                               ; preds = %43
  %48 = load i32, i32* %13, align 4
  %49 = icmp eq i32 %48, 0
  br i1 %49, label %50, label %54

50:                                               ; preds = %47
  %51 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %52 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 4
  store i32 %53, i32* %13, align 4
  br label %54

54:                                               ; preds = %50, %47
  %55 = load i32, i32* %13, align 4
  %56 = sext i32 %55 to i64
  %57 = icmp ult i64 %56, 16
  br i1 %57, label %58, label %59

58:                                               ; preds = %54
  br label %202

59:                                               ; preds = %54
  %60 = load i32, i32* %13, align 4
  %61 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %62 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  %64 = icmp slt i32 %60, %63
  br i1 %64, label %65, label %80

65:                                               ; preds = %59
  %66 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %67 = load i32, i32* %13, align 4
  %68 = call i64 @pskb_trim_rcsum(%struct.sk_buff* %66, i32 %67)
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %71

70:                                               ; preds = %65
  br label %202

71:                                               ; preds = %65
  %72 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %73 = call %struct.TYPE_4__* @ipv6_hdr(%struct.sk_buff* %72)
  %74 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %73, i32 0, i32 1
  store %struct.in6_addr* %74, %struct.in6_addr** %8, align 8
  %75 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %76 = call %struct.TYPE_4__* @ipv6_hdr(%struct.sk_buff* %75)
  %77 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %76, i32 0, i32 0
  store %struct.in6_addr* %77, %struct.in6_addr** %9, align 8
  %78 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %79 = call %struct.udphdr* @udp_hdr(%struct.sk_buff* %78)
  store %struct.udphdr* %79, %struct.udphdr** %11, align 8
  br label %80

80:                                               ; preds = %71, %59
  br label %81

81:                                               ; preds = %80, %43
  %82 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %83 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %84 = load i32, i32* %7, align 4
  %85 = call i64 @udp6_csum_init(%struct.sk_buff* %82, %struct.udphdr* %83, i32 %84)
  %86 = icmp ne i64 %85, 0
  br i1 %86, label %87, label %88

87:                                               ; preds = %81
  br label %226

88:                                               ; preds = %81
  %89 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %90 = call %struct.sock* @skb_steal_sock(%struct.sk_buff* %89)
  store %struct.sock* %90, %struct.sock** %12, align 8
  %91 = load %struct.sock*, %struct.sock** %12, align 8
  %92 = icmp ne %struct.sock* %91, null
  br i1 %92, label %93, label %130

93:                                               ; preds = %88
  %94 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %95 = call %struct.dst_entry* @skb_dst(%struct.sk_buff* %94)
  store %struct.dst_entry* %95, %struct.dst_entry** %14, align 8
  %96 = load %struct.sock*, %struct.sock** %12, align 8
  %97 = getelementptr inbounds %struct.sock, %struct.sock* %96, i32 0, i32 0
  %98 = load %struct.dst_entry*, %struct.dst_entry** %97, align 8
  %99 = load %struct.dst_entry*, %struct.dst_entry** %14, align 8
  %100 = icmp ne %struct.dst_entry* %98, %99
  %101 = zext i1 %100 to i32
  %102 = call i64 @unlikely(i32 %101)
  %103 = icmp ne i64 %102, 0
  br i1 %103, label %104, label %108

104:                                              ; preds = %93
  %105 = load %struct.sock*, %struct.sock** %12, align 8
  %106 = load %struct.dst_entry*, %struct.dst_entry** %14, align 8
  %107 = call i32 @udp6_sk_rx_dst_set(%struct.sock* %105, %struct.dst_entry* %106)
  br label %108

108:                                              ; preds = %104, %93
  %109 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %110 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %109, i32 0, i32 2
  %111 = load i32, i32* %110, align 4
  %112 = icmp ne i32 %111, 0
  br i1 %112, label %122, label %113

113:                                              ; preds = %108
  %114 = load %struct.sock*, %struct.sock** %12, align 8
  %115 = call %struct.TYPE_3__* @udp_sk(%struct.sock* %114)
  %116 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %115, i32 0, i32 0
  %117 = load i32, i32* %116, align 4
  %118 = icmp ne i32 %117, 0
  br i1 %118, label %122, label %119

119:                                              ; preds = %113
  %120 = load %struct.sock*, %struct.sock** %12, align 8
  %121 = call i32 @sock_put(%struct.sock* %120)
  br label %223

122:                                              ; preds = %113, %108
  %123 = load %struct.sock*, %struct.sock** %12, align 8
  %124 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %125 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %126 = call i32 @udp6_unicast_rcv_skb(%struct.sock* %123, %struct.sk_buff* %124, %struct.udphdr* %125)
  store i32 %126, i32* %15, align 4
  %127 = load %struct.sock*, %struct.sock** %12, align 8
  %128 = call i32 @sock_put(%struct.sock* %127)
  %129 = load i32, i32* %15, align 4
  store i32 %129, i32* %4, align 4
  br label %244

130:                                              ; preds = %88
  %131 = load %struct.in6_addr*, %struct.in6_addr** %9, align 8
  %132 = call i64 @ipv6_addr_is_multicast(%struct.in6_addr* %131)
  %133 = icmp ne i64 %132, 0
  br i1 %133, label %134, label %142

134:                                              ; preds = %130
  %135 = load %struct.net*, %struct.net** %10, align 8
  %136 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %137 = load %struct.in6_addr*, %struct.in6_addr** %8, align 8
  %138 = load %struct.in6_addr*, %struct.in6_addr** %9, align 8
  %139 = load %struct.udp_table*, %struct.udp_table** %6, align 8
  %140 = load i32, i32* %7, align 4
  %141 = call i32 @__udp6_lib_mcast_deliver(%struct.net* %135, %struct.sk_buff* %136, %struct.in6_addr* %137, %struct.in6_addr* %138, %struct.udp_table* %139, i32 %140)
  store i32 %141, i32* %4, align 4
  br label %244

142:                                              ; preds = %130
  %143 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %144 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %145 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %144, i32 0, i32 1
  %146 = load i32, i32* %145, align 4
  %147 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %148 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %147, i32 0, i32 0
  %149 = load i32, i32* %148, align 4
  %150 = load %struct.udp_table*, %struct.udp_table** %6, align 8
  %151 = call %struct.sock* @__udp6_lib_lookup_skb(%struct.sk_buff* %143, i32 %146, i32 %149, %struct.udp_table* %150)
  store %struct.sock* %151, %struct.sock** %12, align 8
  %152 = load %struct.sock*, %struct.sock** %12, align 8
  %153 = icmp ne %struct.sock* %152, null
  br i1 %153, label %154, label %171

154:                                              ; preds = %142
  %155 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %156 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %155, i32 0, i32 2
  %157 = load i32, i32* %156, align 4
  %158 = icmp ne i32 %157, 0
  br i1 %158, label %166, label %159

159:                                              ; preds = %154
  %160 = load %struct.sock*, %struct.sock** %12, align 8
  %161 = call %struct.TYPE_3__* @udp_sk(%struct.sock* %160)
  %162 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %161, i32 0, i32 0
  %163 = load i32, i32* %162, align 4
  %164 = icmp ne i32 %163, 0
  br i1 %164, label %166, label %165

165:                                              ; preds = %159
  br label %223

166:                                              ; preds = %159, %154
  %167 = load %struct.sock*, %struct.sock** %12, align 8
  %168 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %169 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %170 = call i32 @udp6_unicast_rcv_skb(%struct.sock* %167, %struct.sk_buff* %168, %struct.udphdr* %169)
  store i32 %170, i32* %4, align 4
  br label %244

171:                                              ; preds = %142
  %172 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %173 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %172, i32 0, i32 2
  %174 = load i32, i32* %173, align 4
  %175 = icmp ne i32 %174, 0
  br i1 %175, label %177, label %176

176:                                              ; preds = %171
  br label %223

177:                                              ; preds = %171
  %178 = load i32, i32* @XFRM_POLICY_IN, align 4
  %179 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %180 = call i32 @xfrm6_policy_check(i32* null, i32 %178, %struct.sk_buff* %179)
  %181 = icmp ne i32 %180, 0
  br i1 %181, label %183, label %182

182:                                              ; preds = %177
  br label %234

183:                                              ; preds = %177
  %184 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %185 = call i64 @udp_lib_checksum_complete(%struct.sk_buff* %184)
  %186 = icmp ne i64 %185, 0
  br i1 %186, label %187, label %188

187:                                              ; preds = %183
  br label %226

188:                                              ; preds = %183
  %189 = load %struct.net*, %struct.net** %10, align 8
  %190 = load i32, i32* @UDP_MIB_NOPORTS, align 4
  %191 = load i32, i32* %7, align 4
  %192 = load i32, i32* @IPPROTO_UDPLITE, align 4
  %193 = icmp eq i32 %191, %192
  %194 = zext i1 %193 to i32
  %195 = call i32 @__UDP6_INC_STATS(%struct.net* %189, i32 %190, i32 %194)
  %196 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %197 = load i32, i32* @ICMPV6_DEST_UNREACH, align 4
  %198 = load i32, i32* @ICMPV6_PORT_UNREACH, align 4
  %199 = call i32 @icmpv6_send(%struct.sk_buff* %196, i32 %197, i32 %198, i32 0)
  %200 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %201 = call i32 @kfree_skb(%struct.sk_buff* %200)
  store i32 0, i32* %4, align 4
  br label %244

202:                                              ; preds = %70, %58, %42
  %203 = load i32, i32* %7, align 4
  %204 = load i32, i32* @IPPROTO_UDPLITE, align 4
  %205 = icmp eq i32 %203, %204
  %206 = zext i1 %205 to i64
  %207 = select i1 %205, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %208 = load %struct.in6_addr*, %struct.in6_addr** %8, align 8
  %209 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %210 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %209, i32 0, i32 1
  %211 = load i32, i32* %210, align 4
  %212 = call i32 @ntohs(i32 %211)
  %213 = load i32, i32* %13, align 4
  %214 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %215 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %214, i32 0, i32 0
  %216 = load i32, i32* %215, align 4
  %217 = load %struct.in6_addr*, %struct.in6_addr** %9, align 8
  %218 = load %struct.udphdr*, %struct.udphdr** %11, align 8
  %219 = getelementptr inbounds %struct.udphdr, %struct.udphdr* %218, i32 0, i32 0
  %220 = load i32, i32* %219, align 4
  %221 = call i32 @ntohs(i32 %220)
  %222 = call i32 @net_dbg_ratelimited(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0), i8* %207, %struct.in6_addr* %208, i32 %212, i32 %213, i32 %216, %struct.in6_addr* %217, i32 %221)
  br label %234

223:                                              ; preds = %176, %165, %119
  %224 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %225 = call i32 @udp6_csum_zero_error(%struct.sk_buff* %224)
  br label %226

226:                                              ; preds = %223, %187, %87
  %227 = load %struct.net*, %struct.net** %10, align 8
  %228 = load i32, i32* @UDP_MIB_CSUMERRORS, align 4
  %229 = load i32, i32* %7, align 4
  %230 = load i32, i32* @IPPROTO_UDPLITE, align 4
  %231 = icmp eq i32 %229, %230
  %232 = zext i1 %231 to i32
  %233 = call i32 @__UDP6_INC_STATS(%struct.net* %227, i32 %228, i32 %232)
  br label %234

234:                                              ; preds = %226, %202, %182, %23
  %235 = load %struct.net*, %struct.net** %10, align 8
  %236 = load i32, i32* @UDP_MIB_INERRORS, align 4
  %237 = load i32, i32* %7, align 4
  %238 = load i32, i32* @IPPROTO_UDPLITE, align 4
  %239 = icmp eq i32 %237, %238
  %240 = zext i1 %239 to i32
  %241 = call i32 @__UDP6_INC_STATS(%struct.net* %235, i32 %236, i32 %240)
  %242 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %243 = call i32 @kfree_skb(%struct.sk_buff* %242)
  store i32 0, i32* %4, align 4
  br label %244

244:                                              ; preds = %234, %188, %166, %134, %122
  %245 = load i32, i32* %4, align 4
  ret i32 %245
}

declare dso_local %struct.net* @dev_net(i32) #1

declare dso_local i32 @pskb_may_pull(%struct.sk_buff*, i32) #1

declare dso_local %struct.TYPE_4__* @ipv6_hdr(%struct.sk_buff*) #1

declare dso_local %struct.udphdr* @udp_hdr(%struct.sk_buff*) #1

declare dso_local i32 @ntohs(i32) #1

declare dso_local i64 @pskb_trim_rcsum(%struct.sk_buff*, i32) #1

declare dso_local i64 @udp6_csum_init(%struct.sk_buff*, %struct.udphdr*, i32) #1

declare dso_local %struct.sock* @skb_steal_sock(%struct.sk_buff*) #1

declare dso_local %struct.dst_entry* @skb_dst(%struct.sk_buff*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @udp6_sk_rx_dst_set(%struct.sock*, %struct.dst_entry*) #1

declare dso_local %struct.TYPE_3__* @udp_sk(%struct.sock*) #1

declare dso_local i32 @sock_put(%struct.sock*) #1

declare dso_local i32 @udp6_unicast_rcv_skb(%struct.sock*, %struct.sk_buff*, %struct.udphdr*) #1

declare dso_local i64 @ipv6_addr_is_multicast(%struct.in6_addr*) #1

declare dso_local i32 @__udp6_lib_mcast_deliver(%struct.net*, %struct.sk_buff*, %struct.in6_addr*, %struct.in6_addr*, %struct.udp_table*, i32) #1

declare dso_local %struct.sock* @__udp6_lib_lookup_skb(%struct.sk_buff*, i32, i32, %struct.udp_table*) #1

declare dso_local i32 @xfrm6_policy_check(i32*, i32, %struct.sk_buff*) #1

declare dso_local i64 @udp_lib_checksum_complete(%struct.sk_buff*) #1

declare dso_local i32 @__UDP6_INC_STATS(%struct.net*, i32, i32) #1

declare dso_local i32 @icmpv6_send(%struct.sk_buff*, i32, i32, i32) #1

declare dso_local i32 @kfree_skb(%struct.sk_buff*) #1

declare dso_local i32 @net_dbg_ratelimited(i8*, i8*, %struct.in6_addr*, i32, i32, i32, %struct.in6_addr*, i32) #1

declare dso_local i32 @udp6_csum_zero_error(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
